# Textanalysis-Tool

./: .gitignore  CODE_OF_CONDUCT.md  Dockerfile.frontend  README.md  angular.json  compose.yaml  eslint.config.mjs  package-lock.json  package.json
.github/: copilot-instructions.md
backend/: Dockerfile.backend  pyproject.toml  textanalyse.db
backend/tests/: conftest.py  test_api_history.py  test_api_plagiarism.py  test_api_textanalyse.py  test_api_textanalyse_by_ids.py  test_api_texts.py  test_db_helpers.py  test_pipeline.py  test_preprocessing.py
backend/textanalyse_backend/: config.py  main.py
backend/textanalyse_backend/api/: admin.py  dashboard.py  history.py  plagiarism.py  textanalyse.py  texts.py
backend/textanalyse_backend/db/: models.py  session.py
backend/textanalyse_backend/schemas/: admin.py  dashboard.py  history.py  plagiarism.py  textanalyse.py  texts.py
backend/textanalyse_backend/services/: admin_auth.py  admin_runs.py  admin_texts.py  clustering.py  db_helpers.py  helpers.py  history.py  pipeline.py  plagiarism_service.py  preprocessing.py  vectorization.py  wordclouds.py
src/: index.html  styles.css
src/app/: app.routes.ts  app.spec.ts  app.ts
src/app/api/: admin_api.service.ts  history_api.service.ts  plagiatchecker_api.service.ts  textanalyse_api.service.ts  texts_api.service.ts
src/app/pages/input/: input.ts  (+2 more)
src/environments/: environment.prod.ts  environment.ts
test_frontend/: package-lock.json  package.json  vitest.config.ts
test_frontend/e2e/: example.spec.ts  functionality.spec.ts
test_frontend/unit/: helpers.spec.ts
(+32 files in other folders)
