[project]
name = "textanalyse"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Docterpanzen", email = "ko5099@mci4me.at"},
]
dependencies = ["fastapi>=0.124.0", "uvicorn[standart]>=0.38.0", "scikit-learn>=1.7.2", "numpy>=2.3.5", "sqlalchemy>=2.0.44"]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "httpx>=0.28.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.pdm.scripts]
test = {cmd = "pdm run pytest"}
api = {cmd = "pdm run uvicorn textanalyse_backend.main:app --reload --port 8000"}